policies/kubernetes/rbac/custom-4.1.7.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: custom-4-1-7-cluster-access-manager
  annotations:
    policies.kyverno.io/category: CIS 4.1.7
    policies.kyverno.io/description: |
      Checks for usage of Cluster Access Manager API or annotation in RBAC resources if available.
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: check-cluster-access-manager
      match:
        any:
        - resources:
            kinds:
              - Role
              - ClusterRole
      validate:
        message: "Cluster Access Manager API should be used (look for annotation or label)."
        pattern:
          metadata:
            annotations:
              cluster-access-manager: "?*"
