policies/kubernetes/rbac/supported-4.1.2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: supported-4.1.2
  annotations:
    policies.kyverno.io/title: Minimize access to secrets
    policies.kyverno.io/category: RBAC
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Role, ClusterRole
    policies.kyverno.io/description: >-
      Ensure that access to secrets is minimized. This policy checks for roles that grant get, list, or watch permissions on secrets.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: restrict-secrets-access
      match:
        any:
        - resources:
            kinds:
              - Role
              - ClusterRole
      validate:
        message: "Access to secrets should be minimized."
        pattern:
          rules:
            - resources:
                - secrets
              verbs: '!get,!list,!watch'
