policies/kubernetes/rbac/supported-4.1.5.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: supported-4.1.5
  annotations:
    policies.kyverno.io/title: Default service accounts should not be used
    policies.kyverno.io/category: ServiceAccount
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: ServiceAccount
    policies.kyverno.io/description: Validates default service accounts are not used
      for security best practices (CIS 4.1.5).
    policies.kyverno.io/cel: 'true'
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: restrict-default-sa
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: Default service account should not be used.
      cel:
        expressions:
        - expression: object.spec.serviceAccountName != 'default'
          message: Default service account should not be used.
