policies/kubernetes/rbac/supported-4.1.6.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: supported-4.1.6
  annotations:
    policies.kyverno.io/title: Mount service account tokens only when necessary
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: Validates service account tokens are mounted
      only when necessary for security (CIS 4.1.6).
    policies.kyverno.io/cel: 'true'
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: restrict-automount-sa-token
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: Service account tokens should not be mounted unless necessary.
      cel:
        expressions:
        - expression: object.spec.automountServiceAccountToken == false
          message: Service account tokens should not be mounted unless necessary.
