policies/kubernetes/rbac/supported-4.2.1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: supported-4.2.1
  annotations:
    policies.kyverno.io/title: Minimize privileged containers
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: Validates privileged containers are blocked for
      security (CIS 4.2.1).
    policies.kyverno.io/cel: 'true'
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: restrict-privileged
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: Privileged containers are not allowed.
      cel:
        expressions:
        - expression: object.spec.containers.all(item, (has(item.securityContext)
            && item.securityContext.privileged) == false)
          message: Privileged containers are not allowed.
