policies/kubernetes/rbac/supported-4.2.2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: supported-4.2.2
  annotations:
    policies.kyverno.io/title: Minimize host PID namespace sharing
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: Ensure that host PID namespace sharing is not
      allowed.
    policies.kyverno.io/cel: 'true'
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: restrict-host-pid
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: Host PID namespace sharing is not allowed.
      cel:
        expressions:
        - expression: "!has(object.spec.hostPID) || object.spec.hostPID == false"
          message: "Host PID namespace sharing is not allowed."
