policies/kubernetes/rbac/supported-4.2.4.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: supported-4.2.4
  annotations:
    policies.kyverno.io/title: Minimize host network namespace sharing
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: Ensure that host network namespace sharing is
      not allowed.
    policies.kyverno.io/cel: 'true'
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: restrict-host-network
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: Host network namespace sharing is not allowed.
      cel:
        expressions:
        - expression: !has(object.spec.hostNetwork) || object.spec.hostNetwork == false
          message: Host network namespace sharing is not allowed.
